--- a/src/component/App.css
+++ b/src/component/App.css
@@ -77,3 +77,11 @@ font-weight: 600;
 cursor: pointer;
 font-family: 'Poppins', sans-serif;
 }
+
+@media screen and (max-width:768px) {
+.login{
+  left: 0;
+  width: 100%;
+  top: 4rem;
+}
+}
